[package]
name = "sunscreen_runtime"
version = "0.7.0"
edition = "2021"

authors = ["Sunscreen LLC"]
rust-version = "1.56.0"
license = "AGPL-3.0-only"
description = "This crate provides a runtime for performing various FHE operations within Sunscreen."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
documentation = "https://docs.sunscreen.tech"
keywords = ["FHE", "BFV", "lattice", "cryptography"]
categories = ["cryptography"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
crossbeam = "0.8.1"
log = "0.4.14"
seal_fhe = { version = "0.7", path = "../seal_fhe" }
sunscreen_fhe_program = { version = "0.7", path = "../sunscreen_fhe_program"  }
sunscreen_compiler_common = { path = "../sunscreen_compiler_common" }
sunscreen_zkp_backend = { path = "../sunscreen_zkp_backend" }
petgraph = "0.6.0"
num_cpus = "1.13.0"
rayon = "1.5.1"
rlp = "0.5.1"
serde = "1.0.147"
semver = "1.0.4"
static_assertions = "1.1.0"
thiserror = "1.0.37"
radix_trie = "0.2.1"
backtrace = "0.3.67"
actix-web = "4.3.1"
reqwest = "0.11"


[dev-dependencies]
serde_json = "1.0.74"

[features]
debugger = ["sunscreen_compiler_common/debugger"]