[package]
name = "sunscreen_runtime"
version = "0.8.0"
edition = "2021"

authors = ["Sunscreen LLC"]
rust-version = "1.56.0"
license = "AGPL-3.0-only"
description = "This crate provides a runtime for performing various FHE operations within Sunscreen."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
documentation = "https://docs.sunscreen.tech"
keywords = ["FHE", "BFV", "lattice", "cryptography"]
categories = ["cryptography"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
crossbeam = { workspace = true }
log = { workspace = true }
seal_fhe = { workspace = true }
sunscreen_fhe_program = { workspace = true }
sunscreen_compiler_common = { workspace = true }
sunscreen_zkp_backend = { workspace = true }
petgraph = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
rlp = { workspace = true }
serde = { workspace = true }
semver = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
deterministic = ["seal_fhe/deterministic"]
