[package]
name = "sunscreen_tfhe"
version = "0.1.0"
edition = "2021"

authors = ["Sunscreen"]
rust-version = "1.56.0"
license = "AGPL-3.0-only"
description = "This crate contains the Sunscreen Torus FHE (TFHE) implementation"
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
documentation = "https://docs.sunscreen.tech"
keywords = ["FHE", "TFHE", "lattice", "cryptography"]
categories = ["cryptography"]
readme = "crates-io.md"


[dependencies]
bytemuck = { workspace = true }
# TODO: Remove when Rust stabilizes Cursor API
linked-list = "0.0.3"
logproof = { workspace = true, optional = true }
num = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
realfft = "3.3.0"
rustfft = "6.1.0"
serde = { workspace = true }
sunscreen_math = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
merlin = "3.0.0"
proptest = "1.4.0"

[features]
logproof = ["dep:logproof"]

[[bench]]
name = "tfhe_proof"
harness = false
required-features= ["logproof"]

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "ops"
harness = false
