[package]
name = "sunscreen_zkp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519_dalek = { package="sunscreen_curve25519", path = "../sunscreen_curve25519", default-features = false, features = ["serde"] }
bulletproofs = { package = "sunscreen_bulletproofs", path = "../sunscreen_bulletproofs", features = ["yoloproofs"], optional = true }
crypto-bigint = "0.4.9"
merlin = { version = "3.0.0", optional = true}
bumpalo = "3.11.1"
petgraph = "0.6.2"
sunscreen_compiler_common = { path = "../sunscreen_compiler_common" }
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
static_assertions = "1.1.0"
log = "0.4.17"

[features]
default = ["bulletproofs"]
bulletproofs = [
    "dep:bulletproofs",
    "dep:merlin"
]
