[package]
name = "sunscreen_zkp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { workspace = true }
bulletproofs = { workspace = true, optional = true }
crypto-bigint = { workspace = true}
merlin = { workspace = true, optional = true}
bumpalo = { workspace = true }
petgraph = { workspace = true }
sunscreen_compiler_common = { workspace = true }
serde = { workspace = true, features = ["rc"] }
thiserror = { workspace = true }
static_assertions = { workspace = true }
log = { workspace = true }

[dev-dependencies]
serde_json = "1.0.74"
serial_test = "2.0.0"

[features]
default = ["bulletproofs"]
bulletproofs = [
    "dep:bulletproofs",
    "dep:merlin"
]
debugger = ["sunscreen_compiler_common/debugger"]
