[package]
name = "sunscreen_zkp_backend"
version = "0.8.1"
edition = "2021"

authors = ["Sunscreen"]
rust-version = "1.56.0"
license = "AGPL-3.0-only"
description = "This crate contains the ZKP backend of the Sunscreen compiler."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
keywords = ["FHE", "BFV", "lattice", "cryptography"]
categories = ["cryptography"]
readme = "crates-io.md"

[dependencies]
curve25519-dalek = { workspace = true }
bulletproofs = { workspace = true, optional = true }
crypto-bigint = { workspace = true }
merlin = { workspace = true, optional = true }
petgraph = { workspace = true }
rand = { workspace = true }
sunscreen_compiler_common = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
static_assertions = { workspace = true }
log = { workspace = true }

[features]
default = ["bulletproofs"]
bulletproofs = ["dep:bulletproofs", "dep:merlin"]
