[package]
name = "sunscreen_zkp_compiler_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sunscreen_compiler_common = { path = "../sunscreen_compiler_common" }
proc-macro2  = "1.0.47"
quote = "1.0.10"
syn = { version = "1.0.81", features = ["derive", "full", "fold"] }