[package]
name = "bfv_zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.0-alpha.4"
ark-poly = "0.4.0-alpha.4"
crypto-bigint = "0.4.9"
rand = "0.8.5"
rand_distr = "0.4.3"
sunscreen = { path = "../../sunscreen" }
sunscreen_zkp_backend = { path = "../../sunscreen_zkp_backend" }
