[package]
name = "bfv_zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { workspace = true }
ark-poly = { workspace = true }
crypto-bigint = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
sunscreen = { workspace = true }
sunscreen_zkp_backend = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }