[package]
name = "cannonical_norm_noise_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sunscreen_backend = { workspace = true }
seal_fhe = { workspace = true }
sunscreen_runtime = { workspace = true }
sunscreen_fhe_program = { workspace = true }
rayon = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
