[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sunscreen_compiler = { path = "../../sunscreen_compiler" }
sunscreen_runtime = { path = "../../sunscreen_runtime" }
num = "0.4.0"